[tool.poetry]
name = "docgpt"
version = "0.1.0"
description = ""
authors = ["Morgan C. Nicholson <morgannicholson1371@gmail.com>"]
readme = "README.md"
include = [
    { path="src" }
]

[tool.mypy]
python_version = "3.11"
files="src/**/*.py"

ignore_missing_imports=true
strict_optional=true
follow_imports="skip"


[tool.poetry.dependencies]
python = "^3.11"
tiktoken = ">=0.5.2,<0.6.0"
pydantic = "^2.1.1"
markdown-to-json = "^2.1.0"
pypandoc = "^1.11"
openai = "^1.6.1"
pandas = "^2.0.3"
langchain = "^0.0.352"
faiss-cpu = "^1.7.4"
bs4 = "^0.0.1"
dependency-injector = "^4.41.0"
gitpython = "^3.1.40"
pymongo = "^4.6.0"
py-cord = "^2.4.1"
tqdm = "^4.66.1"
unstructured = {version="^0.11.6", extras=["md"]}
chromadb = "^0.4.21"
fastapi = {version = "^0.108.0", extras = ["standard"]}
uvicorn = "^0.25.0"
langchain-openai = "^0.0.2"

[tool.poetry.extras]

[tool.poetry.group.develop.dependencies]
black = "^23.7.0"
pytest = "^7.4.0"
isort = "^5.12.0"
requests-mock = "^1.11.0"
faker = "^19.6.2"
mypy = "^1.5.1"
types-requests = "^2.31.0.3"
pytest-cov = "^4.1.0"


[tool.poetry.group.postgres.dependencies]
pgvector = "^0.2.3"
psycopg2-binary = "^2.9.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
